Added support for setting global environment variables